--- a/shop-api/src/main/resources/application.yml
+++ b/shop-api/src/main/resources/application.yml
@@ -2,6 +2,15 @@ spring:
   jpa:
     hibernate:
       ddl-auto: none
+    defer-datasource-initialization: true
+  datasource:
+    url: jdbc:h2:mem:db-shop
+    username: sa
+    password:
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
 
 server:
   port: 8080
