--- a/kafka-admin/pom.xml
+++ b/kafka-admin/pom.xml
@@ -6,6 +6,18 @@
 	<groupId>br.com.jamesson</groupId>
 	<artifactId>kafka-manager</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>8</source>
+					<target>8</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 	<name>kafka-admin</name>
 	<description>Kafka Admin</description>
 
@@ -17,7 +29,7 @@
 		<dependency>
 			<groupId>org.apache.kafka</groupId>
 			<artifactId>kafka-clients</artifactId>
-			<version>3.3.1</version>
+			<version>3.0.0</version>
 		</dependency>
 	</dependencies>
 
