--- a/shop-api/src/main/resources/application.yml
+++ b/shop-api/src/main/resources/application.yml
@@ -11,6 +11,9 @@ spring:
     console:
       enabled: true
       path: /h2-console
+  kafka:
+    bootstrap-servers: kafka:9092
 
 server:
   port: 8080
+
