--- a/shop-validator/src/main/resources/application.yml
+++ b/shop-validator/src/main/resources/application.yml
@@ -11,6 +11,8 @@ spring:
     console:
       enabled: true
       path: /h2-console
+  kafka:
+    bootstrap-servers: kafka:9092
 
 server:
-  port: ${PORT:0}
+  port: 8081
